[gd_scene load_steps=7 format=2]

[ext_resource path="res://Data/Backgrounds/Bennett.tscn" type="PackedScene" id=1]
[ext_resource path="res://Data/Scenes/Title.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Font/Main.tres" type="BitmapFont" id=3]
[ext_resource path="res://Data/UI/EditorTheme.tres" type="Theme" id=4]
[ext_resource path="res://Sprites/UI/Logo.png" type="Texture" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends ColorRect

func _process(delta):
	modulate.a = max(modulate.a - 4 * delta, 0.0)
"

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="BennettBG" parent="." instance=ExtResource( 1 )]

[node name="Notice" type="Label" parent="."]
margin_right = 426.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
text = "







(DEVELOPMENT BUILD)"
align = 1

[node name="PlayButton" type="Button" parent="."]
margin_left = 173.0
margin_top = 120.0
margin_right = 249.0
margin_bottom = 148.0
theme = ExtResource( 4 )
text = "Run editor"

[node name="MusButton" type="CheckButton" parent="."]
margin_left = 173.0
margin_top = 152.0
margin_right = 249.0
margin_bottom = 178.0
theme = ExtResource( 4 )
pressed = true
text = "Music"

[node name="SndButton" type="CheckButton" parent="."]
margin_left = 173.0
margin_top = 184.0
margin_right = 249.0
margin_bottom = 210.0
theme = ExtResource( 4 )
pressed = true
text = "Sound"

[node name="Title" type="Sprite" parent="."]
position = Vector2( 152, 8 )
texture = ExtResource( 6 )
centered = false

[node name="Transition" type="ColorRect" parent="."]
margin_right = 426.0
margin_bottom = 240.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = SubResource( 1 )
